banner jpg now displaying again

--- a/MarkGrandtour/styles.css
+++ b/MarkGrandtour/styles.css
@@ -11,7 +11,7 @@ html {
 }
 
 /* Fixed banner (header) */
-.bannerx {
+.banner {
   background-image: url("tgv02.jpg");
   background-size: cover;
   background-position: center;
