--- a/MarkGrandtour/styles.css
+++ b/MarkGrandtour/styles.css
@@ -10,6 +10,24 @@ html {
   color: white; /* White text for contrast */
 }
 
+
+.banner-text {
+  color: orange;
+            font-weight: bold;
+            text-shadow: 
+                -2px -2px 0 #000,  
+                2px -2px 0 #000,  
+                -2px 2px 0 #000,  
+                2px 2px 0 #000;
+}
+
+.banner-h1 {
+  font-size: 2.5rem;
+}
+
+.banner-h2 {
+  font-size: 1.25rem;
+}
 /* Fixed banner (header) */
 .banner {
   background-image: url("tgv02.jpg");
