--- a/SvgPrimer/fretboard.css
+++ b/SvgPrimer/fretboard.css
@@ -4,12 +4,12 @@
 .fret-label {
   font-family: sans-serif;
   font-size: 12px;
-  fill: magenta;
+  fill: #0077cc;
   text-anchor: middle;
 }
 
 .string-muted {
-  fill: #ccc;
+  fill: #0077cc;
   font-family: sans-serif;
   font-size: 12px;
 }
